trunk/Archive2/48/0ad8a7b44ef427/output
main.cpp:35:32: error: reference to non-static member function must be called; did you mean to call it with no arguments?
    while (!player1||!player2 .eof)
                      ~~~~~~~~~^~~
                                  ()
1 error generated.
